bindings/go/internal/uniffi/blazen/blazen.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef struct UniffiVTableCallbackInterfaceToolHandler {
    UniffiCallbackInterfaceFree uniffiFree;
    UniffiCallbackInterfaceClone uniffiClone;
    UniffiCallbackInterfaceToolHandlerMethod0 execute;
} UniffiVTableCallbackInterfaceToolHandler;
typedef struct UniffiVTableCallbackInterfaceCompletionStreamSink {
    UniffiCallbackInterfaceFree uniffiFree;
    UniffiCallbackInterfaceClone uniffiClone;
    UniffiCallbackInterfaceCompletionStreamSinkMethod0 onChunk;
    UniffiCallbackInterfaceCompletionStreamSinkMethod1 onDone;
    UniffiCallbackInterfaceCompletionStreamSinkMethod2 onError;
} UniffiVTableCallbackInterfaceCompletionStreamSink;
typedef struct UniffiVTableCallbackInterfaceStepHandler {
    UniffiCallbackInterfaceFree uniffiFree;
    UniffiCallbackInterfaceClone uniffiClone;
    UniffiCallbackInterfaceStepHandlerMethod0 invoke;
} UniffiVTableCallbackInterfaceStepHandler;
uint64_t uniffi_blazen_uniffi_fn_clone_agent(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_agent(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_constructor_agent_new(uint64_t model, RustBuffer system_prompt, RustBuffer tools, uint64_t tool_handler, uint32_t max_iterations, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_agent_run(uint64_t ptr, RustBuffer user_input
);
RustBuffer uniffi_blazen_uniffi_fn_method_agent_run_blocking(uint64_t ptr, RustBuffer user_input, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_toolhandler(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_toolhandler(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_init_callback_vtable_toolhandler(UniffiVTableCallbackInterfaceToolHandler* vtable
);
uint64_t uniffi_blazen_uniffi_fn_method_toolhandler_execute(uint64_t ptr, RustBuffer tool_name, RustBuffer arguments_json
);
uint64_t uniffi_blazen_uniffi_fn_clone_imagegenmodel(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_imagegenmodel(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_imagegenmodel_generate(uint64_t ptr, RustBuffer prompt, RustBuffer negative_prompt, RustBuffer width, RustBuffer height, RustBuffer num_images, RustBuffer model
);
RustBuffer uniffi_blazen_uniffi_fn_method_imagegenmodel_generate_blocking(uint64_t ptr, RustBuffer prompt, RustBuffer negative_prompt, RustBuffer width, RustBuffer height, RustBuffer num_images, RustBuffer model, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_sttmodel(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_sttmodel(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_sttmodel_transcribe(uint64_t ptr, RustBuffer audio_source, RustBuffer language
);
RustBuffer uniffi_blazen_uniffi_fn_method_sttmodel_transcribe_blocking(uint64_t ptr, RustBuffer audio_source, RustBuffer language, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_ttsmodel(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_ttsmodel(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_ttsmodel_synthesize(uint64_t ptr, RustBuffer text, RustBuffer voice, RustBuffer language
);
RustBuffer uniffi_blazen_uniffi_fn_method_ttsmodel_synthesize_blocking(uint64_t ptr, RustBuffer text, RustBuffer voice, RustBuffer language, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_completionmodel(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_completionmodel(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_completionmodel_complete(uint64_t ptr, RustBuffer request
);
RustBuffer uniffi_blazen_uniffi_fn_method_completionmodel_complete_blocking(uint64_t ptr, RustBuffer request, RustCallStatus *out_status
);
RustBuffer uniffi_blazen_uniffi_fn_method_completionmodel_model_id(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_embeddingmodel(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_embeddingmodel(uint64_t handle, RustCallStatus *out_status
);
uint32_t uniffi_blazen_uniffi_fn_method_embeddingmodel_dimensions(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_embeddingmodel_embed(uint64_t ptr, RustBuffer inputs
);
RustBuffer uniffi_blazen_uniffi_fn_method_embeddingmodel_embed_blocking(uint64_t ptr, RustBuffer inputs, RustCallStatus *out_status
);
RustBuffer uniffi_blazen_uniffi_fn_method_embeddingmodel_model_id(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_peerclient(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_peerclient(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_constructor_peerclient_connect(RustBuffer address, RustBuffer client_node_id, RustCallStatus *out_status
);
RustBuffer uniffi_blazen_uniffi_fn_method_peerclient_node_id(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_peerclient_run_remote_workflow(uint64_t ptr, RustBuffer workflow_name, RustBuffer step_ids, RustBuffer input_json, RustBuffer timeout_secs
);
RustBuffer uniffi_blazen_uniffi_fn_method_peerclient_run_remote_workflow_blocking(uint64_t ptr, RustBuffer workflow_name, RustBuffer step_ids, RustBuffer input_json, RustBuffer timeout_secs, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_peerserver(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_peerserver(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_constructor_peerserver_new(RustBuffer node_id, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_peerserver_serve(uint64_t ptr, RustBuffer listen_address
);
void uniffi_blazen_uniffi_fn_method_peerserver_serve_blocking(uint64_t ptr, RustBuffer listen_address, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_checkpointstore(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_checkpointstore(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_checkpointstore_delete(uint64_t ptr, RustBuffer run_id
);
void uniffi_blazen_uniffi_fn_method_checkpointstore_delete_blocking(uint64_t ptr, RustBuffer run_id, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_checkpointstore_list(uint64_t ptr
);
RustBuffer uniffi_blazen_uniffi_fn_method_checkpointstore_list_blocking(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_checkpointstore_list_run_ids(uint64_t ptr
);
RustBuffer uniffi_blazen_uniffi_fn_method_checkpointstore_list_run_ids_blocking(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_checkpointstore_load(uint64_t ptr, RustBuffer run_id
);
RustBuffer uniffi_blazen_uniffi_fn_method_checkpointstore_load_blocking(uint64_t ptr, RustBuffer run_id, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_checkpointstore_save(uint64_t ptr, RustBuffer checkpoint
);
void uniffi_blazen_uniffi_fn_method_checkpointstore_save_blocking(uint64_t ptr, RustBuffer checkpoint, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_pipeline(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_pipeline(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_pipeline_run(uint64_t ptr, RustBuffer input_json
);
RustBuffer uniffi_blazen_uniffi_fn_method_pipeline_run_blocking(uint64_t ptr, RustBuffer input_json, RustCallStatus *out_status
);
RustBuffer uniffi_blazen_uniffi_fn_method_pipeline_stage_names(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_pipelinebuilder(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_pipelinebuilder(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_constructor_pipelinebuilder_new(RustBuffer name, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_pipelinebuilder_add_workflow(uint64_t ptr, uint64_t workflow, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_pipelinebuilder_build(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_pipelinebuilder_parallel(uint64_t ptr, RustBuffer name, RustBuffer branch_names, RustBuffer workflows, int8_t wait_all, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_pipelinebuilder_stage(uint64_t ptr, RustBuffer name, uint64_t workflow, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_pipelinebuilder_timeout_per_stage_ms(uint64_t ptr, uint64_t millis, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_pipelinebuilder_total_timeout_ms(uint64_t ptr, uint64_t millis, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_completionstreamsink(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_completionstreamsink(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_init_callback_vtable_completionstreamsink(UniffiVTableCallbackInterfaceCompletionStreamSink* vtable
);
uint64_t uniffi_blazen_uniffi_fn_method_completionstreamsink_on_chunk(uint64_t ptr, RustBuffer chunk
);
uint64_t uniffi_blazen_uniffi_fn_method_completionstreamsink_on_done(uint64_t ptr, RustBuffer finish_reason, RustBuffer usage
);
uint64_t uniffi_blazen_uniffi_fn_method_completionstreamsink_on_error(uint64_t ptr, RustBuffer err
);
uint64_t uniffi_blazen_uniffi_fn_clone_stephandler(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_stephandler(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_init_callback_vtable_stephandler(UniffiVTableCallbackInterfaceStepHandler* vtable
);
uint64_t uniffi_blazen_uniffi_fn_method_stephandler_invoke(uint64_t ptr, RustBuffer event
);
uint64_t uniffi_blazen_uniffi_fn_clone_workflow(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_workflow(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_method_workflow_run(uint64_t ptr, RustBuffer input_json
);
RustBuffer uniffi_blazen_uniffi_fn_method_workflow_run_blocking(uint64_t ptr, RustBuffer input_json, RustCallStatus *out_status
);
RustBuffer uniffi_blazen_uniffi_fn_method_workflow_step_names(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_blazen_uniffi_fn_clone_workflowbuilder(uint64_t handle, RustCallStatus *out_status
);
void uniffi_blazen_uniffi_fn_free_workflowbuilder(uint64_t handle, RustCallStatus *out_status
);