bindings/ruby/lib/uniffi/blazen/blazen.rb


  attach_function :uniffi_blazen_uniffi_fn_clone_agent,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_agent,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_constructor_agent_new,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, :uint64, :uint32, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_agent_run,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_agent_run_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_toolhandler,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_toolhandler,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_init_callback_vtable_toolhandler,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_toolhandler_execute,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_clone_imagegenmodel,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_imagegenmodel,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_imagegenmodel_generate,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_imagegenmodel_generate_blocking,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_sttmodel,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_sttmodel,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_sttmodel_transcribe,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_sttmodel_transcribe_blocking,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_ttsmodel,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_ttsmodel,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_ttsmodel_synthesize,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_ttsmodel_synthesize_blocking,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_completionmodel,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_completionmodel,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_completionmodel_complete,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_completionmodel_complete_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_completionmodel_model_id,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_embeddingmodel,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_embeddingmodel,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_embeddingmodel_dimensions,
    [:uint64, RustCallStatus.by_ref],
    :uint32
  attach_function :uniffi_blazen_uniffi_fn_method_embeddingmodel_embed,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_embeddingmodel_embed_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_embeddingmodel_model_id,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_peerclient,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_peerclient,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_constructor_peerclient_connect,
    [RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_peerclient_node_id,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_peerclient_run_remote_workflow,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_peerclient_run_remote_workflow_blocking,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_peerserver,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_peerserver,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_constructor_peerserver_new,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_peerserver_serve,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_peerserver_serve_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_clone_checkpointstore,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_checkpointstore,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_delete,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_delete_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_list,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_list_blocking,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_list_run_ids,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_list_run_ids_blocking,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_load,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_load_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_save,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_checkpointstore_save_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_clone_pipeline,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_pipeline,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_pipeline_run,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_pipeline_run_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_pipeline_stage_names,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_pipelinebuilder,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_pipelinebuilder,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_constructor_pipelinebuilder_new,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_pipelinebuilder_add_workflow,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_pipelinebuilder_build,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_pipelinebuilder_parallel,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustBuffer.by_value, :int8, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_pipelinebuilder_stage,
    [:uint64, RustBuffer.by_value, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_pipelinebuilder_timeout_per_stage_ms,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_pipelinebuilder_total_timeout_ms,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_clone_completionstreamsink,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_completionstreamsink,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_init_callback_vtable_completionstreamsink,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_completionstreamsink_on_chunk,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_completionstreamsink_on_done,
    [:uint64, RustBuffer.by_value, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_completionstreamsink_on_error,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_clone_stephandler,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_stephandler,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_init_callback_vtable_stephandler,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_stephandler_invoke,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_clone_workflow,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_workflow,
    [:uint64, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_blazen_uniffi_fn_method_workflow_run,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_method_workflow_run_blocking,
    [:uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_method_workflow_step_names,
    [:uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_blazen_uniffi_fn_clone_workflowbuilder,
    [:uint64, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_blazen_uniffi_fn_free_workflowbuilder,
    [:uint64, RustCallStatus.by_ref],
    :void
